Easier to get role of current user for a group
